--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,6 @@ nose2==0.9.2
 six==1.15.0
 Flask==1.1.2
 Sphinx==3.0.3
+sphinx-autodoc-typehints==1.10.3
+sphinx_autoapi==1.3.0
+sphinx-rtd-theme==0.4.3
