--- a/.github/workflows/ossaudit.yml
+++ b/.github/workflows/ossaudit.yml
@@ -31,6 +31,9 @@ jobs:
       run: |
         echo "##[set-output name=audit;]$(ossaudit -f requirements.txt)"
       id: run_oss_audit
+    - name: Print vulnerabilities
+      run: |
+        ${{steps.run_oss_audit.output.audit}}
     - name: Check vulnerabilities
       if: ${{startsWith(steps.run_oss_audit.output.audit, 'Found 0 vulnerabilities')}}
       run: |
