--- a/.github/workflows/ossaudit.yml
+++ b/.github/workflows/ossaudit.yml
@@ -25,7 +25,6 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
         pip install ossaudit
     - name: Run OSS Audit
       run: |
@@ -33,7 +32,7 @@ jobs:
       id: run_oss_audit
     - name: Print vulnerabilities
       run: |
-        ${{steps.run_oss_audit.output.audit}}
+        echo ${{steps.run_oss_audit.output.audit}}
     - name: Check vulnerabilities
       if: ${{startsWith(steps.run_oss_audit.output.audit, 'Found 0 vulnerabilities')}}
       run: |
