--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ six==1.15.0
 Flask==1.1.2
 Sphinx==3.0.3
 sphinx-autodoc-typehints==1.10.3
-sphinx_autoapi==1.3.0
+git+https://github.com/OFBDABV/sphinx-autoapi.git
 sphinx-rtd-theme==0.4.3
 flask-swagger-ui==3.25.0
 flask-restful==0.3.8
