--- a/docker-compose_aws_example.yml
+++ b/docker-compose_aws_example.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   app:
-    image: INSERT_IMAGE_NAME
+    image: aws_account_id.dkr.ecr.region.amazonaws.com/sbti-ecs
     build: .
     ports:
      - "80:8080"
