#43 Add portfolio coverage and improve grouping

--- a/app/static/frontend/package.json
+++ b/app/static/frontend/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~9.1.11",
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "bootstrap": "^4.4.0",
+    "fast-levenshtein": "^2.0.6",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
