#51 Use bandit directly

--- a/.github/workflows/ossaudit.yml
+++ b/.github/workflows/ossaudit.yml
@@ -25,17 +25,10 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        pip install ossaudit
-    - name: Security check - Bandit - API
-      uses: ./
-      with:
-        python_version: ${{ matrix.python-version }}
-        project_path: ./app
-    - name: Security check - Bandit - SBTi
-      uses: ./
-      with:
-        python_version: ${{ matrix.python-version }}
-        project_path: ./SBTi
+        pip install ossaudit bandit
+    - name: Check vulnerabilities using Bandit in API
+      run: |
+        bandit -r ./app
     - name: Run OSS Audit
       id: run_oss_audit
       run: |
