Added a proxy to proxy localhost:4200 to localhost:5000 so I can run a live front-end to the dev backend api withour CORS issues.

--- a/app/static/frontend/angular.json
+++ b/app/static/frontend/angular.json
@@ -86,7 +86,7 @@
               "browserTarget": "frontend:build:production"
             },
             "development": {
-              "browserTarget": "frontend:build"
+              "browserTarget": "frontend:build:development"
             }
           }
         },
