--- a/app/static/frontend/angular.json
+++ b/app/static/frontend/angular.json
@@ -67,7 +67,7 @@
               ],
               "optimization": false,
               "outputHashing": "all",
-              "sourceMap": false,
+              "sourceMap": true,
               "extractCss": false,
               "namedChunks": false,
               "extractLicenses": false,
