--- a/.github/workflows/notebooks.yml
+++ b/.github/workflows/notebooks.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ \#210_David ]
 jobs:
-  run:
+  build:
     runs-on: ubuntu-latest
     name: Run treebeard
     steps:
