--- a/.github/workflows/notebooks.yml
+++ b/.github/workflows/notebooks.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
-          python-version: [3.6]
+          python-version: 3.6
       - uses: treebeardtech/treebeard@master
         with:
           use-docker: false
