--- a/.github/workflows/notebooks.yml
+++ b/.github/workflows/notebooks.yml
@@ -12,6 +12,10 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.6
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - uses: treebeardtech/treebeard@master
         with:
           use-docker: false
