--- a/examples/requirements.txt
+++ b/examples/requirements.txt
@@ -1,4 +1,8 @@
 requests
 jupyter==1.0.0
 pandas==1.0.3
+openpyxl==3.0.5
+matplotlib==3.3.1
+# Comment out next line if you want to work with the official release
 git+git://github.com/OFBDABV/SBTi
+# SBTi
