--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ nose2==0.9.2
 pydantic==1.6.1
 six==1.15.0
 Sphinx==3.0.3
+nbsphinx==0.7.1
 sphinx-autodoc-typehints==1.10.3
 git+https://github.com/OFBDABV/sphinx-autoapi.git
 sphinx-rtd-theme==0.4.3
