--- a/.github/workflows/sphinx-docs-build.yml
+++ b/.github/workflows/sphinx-docs-build.yml
@@ -32,4 +32,5 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           publish_branch: gh-pages-test
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: docs/_build/html/
