--- a/.github/workflows/sphinx-docs-build.yml
+++ b/.github/workflows/sphinx-docs-build.yml
@@ -35,3 +35,4 @@ jobs:
           publish_branch: gh-pages-test
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: docs/_build/html/
+          keep_files: true
