--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ classifiers = [
 
 ]
 keywords = ['Climate', 'SBTi', 'Finance']
+packages = [{ include = "SBTi" }]
 
 [tool.poetry.urls]
 "Bug Tracker" = "https://github.com/ScienceBasedTargets/SBTi-finance-tool/issues"
