--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,15 @@
-nose2==0.9.2
-pydantic==1.6.1
-six==1.15.0
-Sphinx==3.0.3
-sphinx-autodoc-typehints==1.10.3
-git+https://github.com/OFBDABV/sphinx-autoapi.git
-sphinx-rtd-theme==0.4.3
-pandas==1.0.3
-xlrd==1.2.0
+certifi==2021.10.8; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0"
+charset-normalizer==2.0.7; python_full_version >= "3.6.0" and python_version >= "3"
+et-xmlfile==1.1.0; python_version >= "3.6"
+idna==3.3; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.5"
+numpy==1.21.1
+openpyxl==3.0.9; python_version >= "3.6"
+pandas==1.3.4; python_full_version >= "3.7.1"
+pydantic==1.8.2; python_full_version >= "3.6.1"
+python-dateutil==2.8.2; python_full_version >= "3.7.1"
+pytz==2021.3; python_full_version >= "3.7.1"
+requests==2.26.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
+six==1.15.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.3.0")
+typing-extensions==3.10.0.2; python_full_version >= "3.6.1"
+urllib3==1.26.7; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4"
+xlrd==1.2.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
