--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
   "python.testing.cwd": "${cwd}",
   "python.defaultInterpreterPath": ".venv/bin/python",
   "python.formatting.provider": "black",
-  "python.testing.unittestArgs": ["-v", "-s", "./test", "-p", "*test*.py"]
+  "python.testing.unittestArgs": ["-v", "-s", "./test", "-p", "*test*.py"],
+  "restructuredtext.confPath": "${workspaceFolder}/docs"
 }
