--- a/.github/workflows/docs2pages.yaml
+++ b/.github/workflows/docs2pages.yaml
@@ -1,9 +1,9 @@
 name: Docs2Pages
 on:
   workflow_dispatch:
-  # push:
-  #   branches:
-  #     - main
+  push:
+    branches:
+      - main
 
 jobs:
   build-docs:
