add autoapi dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ black = "21.10b0"
 pylint = "^2.10.2"
 ipykernel = "6.5.0"
 Sphinx = "4.3.2"
+sphinx-autoapi = "1.8.4"
 
 [tool.pyright]
 venv = ".venv"
