--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,9 @@ openpyxl = "3.0.9"
 black = "21.10b0"
 pylint = "^2.10.2"
 ipykernel = "6.5.0"
+Sphinx = "4.3.2"
+sphinx-autoapi = "1.8.4"
+sphinx-rtd-theme = "1.0.0"
 
 [tool.pyright]
 venv = ".venv"
