--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ packages = [{ include = "SBTi" }]
 
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.7.1"
 pydantic = "1.8.2"
 six = "1.15.0"
 pandas = "1.3.4"
