--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,12 +31,12 @@ packages = [{ include = "SBTi" }]
 
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.7.1"
 pydantic = "1.8.2"
 six = "1.15.0"
 pandas = "1.3.4"
 xlrd = "1.2.0"
-requests = "2.26.0"
+requests = "2.23.0"
 openpyxl = "3.0.9"
 
 
