Pn test bbg props (#285)
* Added change #1

* First part of proposal #5

* Checking end year is in future

* Fix end_year bug

* One more small

* Additional proposals from BBG

* Adding check of end_year

* fixed datetime

* fixed datetime

* fixed datetime

* Add data files to .gitignore

* Hide SP testing

* Updates to NB #6

* Delete 6_compare_temps_SP.ipynb

* Spelling error in comment

--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,8 @@ docker-compose_aws.yml
 
 # Misc
 .noseids
+
+#Proprietary data used in data provider validation
+examples/data/BBG*
+
+examples/6_compare_temps_SP.ipynb 
