--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ packages = [{ include = "SBTi" }]
 
 
 [tool.poetry.dependencies]
-python = ">=3.7.1,<4"
+python = ">=3.7.1,<4,!=3.9.7"
 pydantic = "1.8.2"
 six = "1.15.0"
 pandas = "1.3.4"
@@ -47,6 +47,7 @@ ipykernel = "6.5.0"
 Sphinx = "4.3.2"
 sphinx-autoapi = "1.8.4"
 sphinx-rtd-theme = "1.0.0"
+streamlit = "^1.15.2"
 
 [tool.pyright]
 venv = ".venv"
