--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,13 +31,14 @@ packages = [{ include = "SBTi" }]
 
 
 [tool.poetry.dependencies]
-python = ">=3.7.1,<4"
+python = "^3.9,<4"
 pydantic = "1.8.2"
 six = "1.15.0"
 pandas = "1.3.4"
 xlrd = "1.2.0"
 requests = "2.28.1"
 openpyxl = "3.0.9"
+cleo = "^2.0.1"
 
 
 [tool.poetry.dev-dependencies]
