--- a/examples/environment.yml
+++ b/examples/environment.yml
@@ -1,11 +1,12 @@
+# this file creates a conda environment latest version of SBTi-finance-tool
 name: sbti_getting_started
 channels:
   - conda-forge
   - defaults
 dependencies:
-  - git=2.28.0=0
-  - pip=20.2.1=py_0
-  - python=3.7.8=h60c2a47_1_cpython
-  - jupyter=1.0.0=py_2
+  - pip=23.2.1
+  - python=3.10.12
+  - jupyterlab=4.0.5
   - pip:
-    - git+git://github.com/OFBDABV/SBTi
+    - sbti-finance-tool
+    - -r requirements.txt
