Update to package version requirements, portfolio coverage method to include exact name matches in addition to LEIs/ISINs, and data model requirements for input to align with SBTi Companies Taking Action table updates.

--- a/examples/environment.yml
+++ b/examples/environment.yml
@@ -3,9 +3,9 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - git=2.28.0=0
-  - pip=20.2.1=py_0
-  - python=3.7.8=h60c2a47_1_cpython
-  - jupyter=1.0.0=py_2
+  - git>=2.0.0
+  - pip>=20.0.0
+  - python>=3.7,<3.10  
+  - jupyter>=1.0.0
   - pip:
     - git+git://github.com/OFBDABV/SBTi
