--- a/.github/workflows/docs2pages.yaml
+++ b/.github/workflows/docs2pages.yaml
@@ -19,6 +19,10 @@ jobs:
 
       - name: Install Poetry
         uses: snok/install-poetry@v1
+        with:
+            version: 1.7.1  
+            virtualenvs-create: true
+            virtualenvs-in-project: true
 
       - name: Install library
         run: poetry install
