--- a/examples/environment.yml
+++ b/examples/environment.yml
@@ -8,4 +8,6 @@ dependencies:
   - python>=3.7,<3.10  
   - jupyter>=1.0.0
   - pip:
-    - git+git://github.com/OFBDABV/SBTi
+      - git+git://github.com/OFBDABV/SBTi
+      - matplotlib==3.2.2
+      - openpyxl==2.5.9
