--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-certifi==2021.10.8; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0"
-charset-normalizer==2.0.12; python_full_version >= "3.6.0" and python_version >= "3"
-et-xmlfile==1.1.0; python_version >= "3.6"
-idna==3.3; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.5"
-numpy==1.22.0
-openpyxl==3.1.2; python_version >= "3.6"
-pandas==1.5.3; python_full_version >= "3.7.1"
-pydantic==1.10.7; python_full_version >= "3.6.1"
-python-dateutil==2.8.2; python_full_version >= "3.7.1"
-pytz==2021.3; python_full_version >= "3.7.1"
-requests==2.29.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
-six==1.16.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.3.0")
-typing-extensions==4.1.1; python_version >= "3.6" and python_full_version >= "3.6.1"
-urllib3==1.26.11; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0"
-xlrd==2.0.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
+certifi>=2021.10.8,<2025.0
+charset-normalizer>=2.0.12,<3
+et-xmlfile>=1.1.0,<2
+idna>=3.3,<4
+numpy>=1.22,<2
+openpyxl>=3.0.10,<4
+pandas>=1.2,<2.2
+pydantic>=1.8,<2
+python-dateutil>=2.8.2,<3
+pytz>=2021.3,<2025.0
+requests>=2.25,<3
+six>=1.14,<2
+typing-extensions>=4.1.1,<5
+urllib3>=1.26.11,<2
+xlrd>=2.0.1,<3
