--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ pandas>=1.0.0
 openpyxl>=2.5.0
 matplotlib>=3.0.0
 numpy>=1.20.0,<2.0.0
-pydantic>=1.0.0
+pydantic>=1.0.0,<2.0.0
 python-dateutil>=2.8.0
 pytz>=2020.1
 six>=1.16.0
