Fix PyPI license metadata to comply with PEP 639
Move license declaration from [tool.poetry] to a [project] table using
SPDX expression and explicit license-files, resolving the
InvalidDistribution 'unrecognized or malformed field license-file' error
when publishing to PyPI.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,6 @@ name = "sbti-finance-tool"
 version = "1.2.1"
 description = "This package helps companies and financial institutions to assess the temperature alignment of current targets, commitments, and investment and lending portfolios, and to use this information to develop targets for official validation by the SBTi."
 authors = ["sbti <financialinstitutions@sciencebasedtargets.org>"]
-license = "MIT"
 readme = "README.md"
 classifiers = [
     "Programming Language :: Python :: 3",
@@ -51,6 +50,10 @@ sphinx-rtd-theme = "1.0.0"
 
 [tool.pyright]
 venv = ".venv"
+
+[project]
+license = "MIT"
+license-files = ["LICENSE"]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
