--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,19 +29,19 @@ packages = [{ include = "SBTi" }]
 
 
 [tool.poetry.dependencies]
-python = ">=3.7.1,<4"
-pydantic = "1.10.7"
+python = ">=3.9,<4"
+pydantic = "1.10.13"
 six = "1.16.0"
 numpy = ">=1.21.0, <2.0.0"
 pandas = "1.5.3"
 xlrd = "2.0.1"
-requests = "2.31.0"
+requests = "2.32.5"
 openpyxl = "3.1.2"
 cleo = "^2.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
-black = "21.10b0"
+black = "24.3.0"
 pylint = "^2.10.2"
 ipykernel = "6.5.0"
 Sphinx = "4.3.2"
